--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -209,7 +209,6 @@
         });
 
 
-
         form.on('radio(orderState)', function (data) {
             //每次选中单选按钮的时候  更新查询的订单状态
             sessionStorage.setItem('orderState', data.value);
@@ -296,7 +295,7 @@
                         return queryOrderState(data.orderState);
                     }
                 }
-                , {fixed: 'right', title: '操作', align: 'center', toolbar: '#barDemo'}
+                , {fixed: 'right', width: 200, title: '操作', align: 'center', toolbar: '#barDemo'}
             ]]
         });
         //监听提交
@@ -326,13 +325,13 @@
         table.on('tool(orderManage)', function (obj) { //tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
             var data = obj.data; //获得当前行数据
             var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
-            var tr = obj.tr; //获得当前行 tr 的DOM对象
+            // var tr = obj.tr; //获得当前行 tr 的DOM对象
             if (layEvent === 'edit') {//编辑
-                location.href = 'schedule_change.html?id=' + data.orderId+ '&date=' + Date.now() + "&idNum=" + data.certificateNumber;
+                location.href = 'schedule_change.html?id=' + data.orderId + '&date=' + Date.now() + "&idNum=" + data.certificateNumber;
             } else if (layEvent === 'queryManage') {//查看详情
-                window.open('orderInfo.html?id=' + encodeURI(data.alRoomCode)+ '&date=' + Date.now() + '&state=1', '_blank')
+                window.open('orderInfo.html?id=' + encodeURI(data.alRoomCode) + '&date=' + Date.now() + '&state=1', '_blank')
             } else if (layEvent === 'accountManage') { //客账管理
-                window.open('orderInfo.html?id=' + encodeURI(data.alRoomCode)+ '&date=' + Date.now() + '&back=0&state=0', '_blank')
+                window.open('orderInfo.html?id=' + encodeURI(data.alRoomCode) + '&date=' + Date.now() + '&back=0&state=0', '_blank')
             } else if (layEvent === 'center') { //入住
                 location.href = 'appoint.html?phone=' + data.phone + "&idNum=" + data.certificateNumber + "&random=" + Date.now();
             } else if (layEvent === 'cancel') {//取消订单
@@ -343,7 +342,7 @@
                     title: '取消订单',
                     shade: 0.6,
                     shadeClose: true,
-                    content: 'iframe_orderCancel.html?id=' + data.orderId+ '&date=' + Date.now(),
+                    content: 'iframe_orderCancel.html?id=' + data.orderId + '&date=' + Date.now(),
                     end: function (index, layero) {
                         tab.reload();
                     }
@@ -354,7 +353,7 @@
                     type: 'POST',
                     dataType: 'json',
                     data: {
-                        orderNumber: data.number
+                        orderId: data.orderId
                     },
                     success: function (rs) {
                         if (rs.success) {
@@ -366,7 +365,7 @@
                                 title: '支付',
                                 shade: 0.6,
                                 shadeClose: true,
-                                content: 'iframe_pay.html?roomid=' + data.roomId + '&s=1&v=' + rs.data.price + "&or=" + rs.data.number + '&payNumber=' + rs.data.payNumber + "&random=" + Date.now() + "&certificateId=" + data.idNumber,
+                                content: 'iframe_pay.html?r=' + Date.now() + '&orderId=' + data.orderId + '&totalPrice=' + rs.data.totalPrice,
                                 end: function () {
                                     sessionStorage.removeItem('payBO');
                                     tab.reload();
@@ -376,25 +375,9 @@
                     }
                 });
 
-            } else if (layEvent === 'queryPrice') {//打印
+            } else if (layEvent === 'queryPrice' || layEvent === 'querySubPrice') {//实时打印
                 sessionStorage.setItem('oIds', data.id);
-                window.open('queryPrice.html?state=2&date=' + Date.now(), "_blank", "toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=yes, resizable=no, copyhistory=yes, width=600, height=600");
-            } else if (layEvent === 'querySubPrice') {//在住打印
-                $.ajax({
-                    url: api.stamOrder,
-                    type: 'POST',
-                    dataType: 'json',
-                    data: {id: data.id},
-                    success: function (rs) {
-                        if (rs.success) {
-                            rs.data.remark = data.remark;
-                            sessionStorage.setItem('QSD', JSON.stringify(rs.data));
-                            window.open('querySubPrice.html?childId=1&date=' + Date.now(), "_blank", "toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=yes, resizable=yes, copyhistory=yes, width=600, height=600");
-                        } else {
-                            showMsg(rs.errMsg, 2, false);
-                        }
-                    }
-                })
+                window.open('queryPrice.html?childId=' + data.id + '&date=' + Date.now(), "_blank", "toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=yes, resizable=no, copyhistory=yes, width=600, height=600");
             }
         });
         //离店时间控件
