--- a/src/main/webapp/changeRoom.html
+++ b/src/main/webapp/changeRoom.html
@@ -159,7 +159,7 @@
                 return false;
             }
 			var d ={};
-            d.id = getUrl("orderChildId");
+            d.id = getUrl("id");
             d.roomTypeId = sRooms[0].roomTypeId;
             d.roomId = sRooms[0].roomId;
             d.everydayRoomPrice = JSON.stringify(getRoomPrice());
