页面： 修改管理层按时间查询BUG 修改子项结账和总结账未传积分减免金额BUG 修改订单列表客源传值BUG 修改子项打印页面样式

--- a/src/main/webapp/cashOrder.html
+++ b/src/main/webapp/cashOrder.html
@@ -126,10 +126,10 @@
                 condition: ''
             };
             if (data.field.startTime) {
-                obj.startTime = new Date(data.field.startTime.replace(/-/g, "/"))
+                obj.startTime = data.field.startTime.replace(/-/g, "/")
             }
             if (data.field.endTime) {
-                obj.endTime = new Date(data.field.endTime.replace(/-/g, "/"))
+                obj.endTime = data.field.endTime.replace(/-/g, "/")
             }
             obj.condition = data.field.mate;
             tab.reload({
