--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -217,7 +217,7 @@
 
         //机构数据绑定
         function selectData() {
-            renderSelect("channel", 'id', 'value', api.allChannel, form);
+            renderSelect("channel", 'value', 'value', api.allChannel, form);
         }
 
         //初始化表格数据
