--- a/src/main/webapp/iframe_orderSettleAccounts.html
+++ b/src/main/webapp/iframe_orderSettleAccounts.html
@@ -268,6 +268,8 @@
                                 window.open('queryPrice.html?childId=' + id + '&date=' + Date.now(), '_block', "toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=yes, resizable=yes, copyhistory=yes, width=600, height=600");
                                 parent.layer.closeAll();
                             }, function () {
+                                //关闭父页面
+                                closeWin();
                                 parent.layer.closeAll();
                             });
                         } else {
